# mysql-proxy

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  test_paren_limit.py  test_paren_unwrapper.py  test_paren_whitespace.py  test_tableau_queries.py  test_unwrap_parens.py
config/: config.yaml.example
docs/: BACKTICK_IDENTIFIER_FIX.md  COMPLEX_INFORMATION_SCHEMA_QUERIES.md  CONNECTION_TESTING.md  DATE_FILTER_VALIDATION.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  INFORMATION_SCHEMA_CONVERSION.md  METADATA_QUERY_BYPASS.md  MIDDLEWARE_ANALYSIS.md  MODERN_PYTHON.md  MYSQL_MIMIC_API_FIX.md  MYSQL_MIMIC_ASSERTION_FIX.md  NULL_COLUMN_NAME_FIX.md  PARENTHESIZED_QUERY_FIX.md  PASSWORD_CONFIG.md  QUICKSTART.md  SET_COMMAND_HANDLING.md  STATIC_QUERY_HANDLING.md  TABLEAU_QUERY_PATTERNS.md  TROUBLESHOOTING.md  VERSIONING_STRATEGY.md  WINDOWS_ODBC_SETUP.md  WINERROR_64_FIX.md
src/: main.py
src/backend/: connection_factory.py  executor.py  native_connection.py  odbc_connection.py
src/config/: logging_config.py  settings.py
src/core/: query_pipeline.py  server.py  session.py
src/detection/: unsupported_detector.py
src/security/: write_blocker.py
src/transformation/: group_by_fixer.py  paren_query_unwrapper.py  subquery_unwrapper.py  tableau_wrapper_unwrapper.py  transformer.py
src/utils/: error_formatter.py  information_schema_converter.py  result_converter.py  sql_parser.py
src/validation/: cob_date_validator.py
tests/: conftest.py
tests/unit/: test_group_by_fixer.py  test_subquery_unwrapper.py  test_write_blocker.py
